[package]
name = "loki_pdf"
version = "0.1.0"
edition = "2024"
authors = ["Steve Roques <steve.roques@gmail.com>"]
description = "A PDF compression library for WebAssembly"
repository = "https://github.com/roquess/loki_pdf"
readme = "README.md"
keywords = ["pdf", "wasm"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
lopdf = "0.32"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
